# cr8s

./: .gitignore  Cargo.toml  Makefile  README.md  compose.sh  docker-compose.yaml  docker-compose.yml  entrypoint.sh  flake.nix
.github/workflows/: test.yaml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: apply.rs  create.rs  delete.rs  get.rs  logs.rs  mod.rs
deployments/: nginx.yaml  rep.yaml
docker/: Dockerfile.node  Dockerfile.server  docker-compose.yml  entrypoint.sh
grafana/provisioning/dashboards/: cr8s.yaml  r8s.yaml
grafana/provisioning/dashboards-files/: cr8s-dashboard.json  r8s-dashboard.json
grafana/provisioning/datasources/: datasource.yaml
node/: Cargo.toml
node/src/: api.rs  config.rs  controller.rs  docker.rs  lib.rs  main.rs  models.rs  node_api.rs  state.rs  sync.rs  worker.rs
node/src/core/: controller.rs  mod.rs  sync.rs  watcher.rs  worker.rs
node/src/docker/: errors.rs  manager.rs  mod.rs  test.rs  test_docker.rs
node/src/runtime/: controller.rs  handler.rs  mod.rs
node/tests/: sync.rs  test_docker.rs
node/tests/common/: mod.rs  test_docker.rs  utils.rs
pod/: Cargo.toml
server/: Cargo.toml
server/src/: cluster.rs  drift_controller.rs  lib.rs  main.rs  scheduler.rs  store.rs
server/src/controllers/: garbage_collector.rs  mod.rs  replicaset.rs
server/src/controllers/replicaset/: mod.rs  state.rs
server/src/controllers/scheduler/: filter.rs  flow.rs  mod.rs  scorer.rs  state.rs
server/src/endpoints/: log.rs  mod.rs  nodes.rs  pods.rs  replicasets.rs
server/src/nodes/: get.rs  mod.rs  register.rs
server/src/scheduler/: flow.rs  mod.rs  run.rs  state.rs
server/src/state/: cache.rs  errors.rs  mod.rs
server/src/store/: backend.rs  cache.rs  errors.rs  mod.rs  state.rs  store.rs  test_store.rs
shared/: Cargo.toml
shared/src/: api.rs  lib.rs  models.rs  utils.rs  view.rs
shared/src/models/: metadata.rs  mod.rs  node.rs  pod.rs  replicaset.rs
tests/: Cargo.toml
tests/src/: common.rs  lib.rs  node_registration.rs
tests/src/common/: mod.rs
tests/src/server/: mod.rs  node_handling.rs  pod_handling.rs
