[package]
name = "cr8sctl"
version = "0.1.0"
edition = "2024"
description = "Command line tool to interact with the apiserver"

[dependencies]
shared = { path = "../shared" }

# Concurrency
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# CLI interface
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
erased-serde = "0.3"

# Terminal output formatting
tabled = "0.20"
