[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1.88"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
uuid = { version = "1.17.0", features = ["serde", "v4"]}
futures-util = "0.3"
bollard = "0.18"
chrono = "0.4.41"
bytes = "1.10.1"
dashmap = "6.1.0"
