[package]
name = "cr8sagt"
version = "0.1.0"
edition = "2024"
description = "Node agent in kubernetes like orchestrator"

[dependencies]
shared = { path = "../shared" }

# HTTP server and client
actix-web = "4.11.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Concurrency
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1.88"
async-stream = "0.3"
futures-util = "0.3"
dashmap = "6.1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }

# Datatypes
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = "0.4.41"
bytes = "1.10.1"

# Docker client
bollard = "0.19.2"

[dev-dependencies]
# mocking control plane api server
wiremock = "0.6"
actix-http = "3.11.0"
