[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.17.0", features = ["serde", "v4"]}
sled = "0.34.7"
dashmap = "6.1.0"
rand = "0.9.1"
async-stream = "0.3"
