[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tabled = "0.20"
uuid = { version = "1.17.0", features = ["serde", "v4"]}
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
futures-util = "0.3"
