[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
testcontainers = "0.24.0"
# Concurrency
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1.17"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.17.0", features = ["serde", "v4"]}
rand = "0.8"
